kube/backend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: docker.io/achalpadol/react-rust-post-backend:v2
          imagePullPolicy: Always

          ports:
            - containerPort: 8000
