kube/db-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1

  selector:
    matchLabels:
      app: db

  template:
    metadata:
      labels:
        app: db

    spec:
      containers:
        - name: db
          image: postgres:16

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data

      volumes:
        - name: db-data
          emptyDir: {}
